# text-generation-inference

./: Cargo.toml
benchmark/src/: generation.rs
proto/: generate.proto
router/: Cargo.toml
router/client/src/: client.rs  lib.rs
router/src/: block_allocator.rs  health.rs  infer.rs  lib.rs  queue.rs  server.rs  validation.rs
server/: Makefile-flash-att-v2
server/text_generation_server/models/: __init__.py  flash_causal_lm.py  flash_mistral.py  flash_qwen2.py  flash_starcoder2.py  vlm_causal_lm.py
server/text_generation_server/models/custom_modeling/: flash_cohere_modeling.py  flash_dbrx_modeling.py  flash_gemma_modeling.py  flash_llama_modeling.py  flash_mistral_modeling.py  flash_neox_modeling.py  flash_phi_modeling.py  flash_rw_modeling.py  flash_santacoder_modeling.py
